frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecommerce
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
      - args:
        - docker-entrypoint.sh
        command:
        - sh
        image: salomaosan/storefront:latest
        imagePullPolicy: Always
        name: ecommerce-spree-observability
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ecommerce
  name: frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
      name: http
      #nodePort: 30005
  selector:
    app: ecommerce
  # Change this value to LoadBalancer for better public ingress routing to this
  # pod on most k8s platforms.
  type: ClusterIP
  # type: NodePort
